--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "pwa-node",
             "request": "launch",
             "cwd": "${workspaceFolder}",
-            "program": "${workspaceFolder}/tests/third.test.ts",
+            "program": "${workspaceFolder}/tests/fourth.test.ts",
             "runtimeExecutable": "deno",
             "runtimeArgs": ["test", "--inspect-brk=127.0.0.1:9229", "-A"],
             "outputCapture": "std",
